Return non-200 when add order preprocessing fails